Archive2/d6/a44514e2ece76d/output
main.cpp: In function 'int main()':
main.cpp:13:5: error: 'it' was not declared in this scope
     it;
     ^
